fading-image: stop trying to generate images while hidden

When the allocated size of the widget is so small there's no space
for the actual image, we shouldn't try to generate one.  gdk-pixbuf
and cairo don't like it much either.

https://bugzilla.gnome.org/show_bug.cgi?id=710493